Add role description

--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -62,6 +62,10 @@ Resources:
             Effect: Allow
             Principal:
               AWS: "*"
+      Description: >-
+        This role can be used to accept all VPC peering connection requests
+        from all accounts within the same AWS Organization. It is not specific
+        to the VPC in this stack.
       Policies:
         - PolicyName: PeeringConnectionPolicy
           PolicyDocument:
