--- a/devops/aws-management/devops-cross-account-access-role.yml
+++ b/devops/aws-management/devops-cross-account-access-role.yml
@@ -27,103 +27,86 @@ Resources:
     Type: AWS::IAM::ManagedPolicy
     Properties:
       PolicyDocument:
-        Version: "2012-10-17"
         Statement:
-          - Effect: Allow
-            Action:
-              - cloudfront:ListDistributions
-            Resource:
-              - "*"
+          - Action: cloudfront:ListDistributions
+            Effect: Allow
+            Resource: "*"
+        Version: "2012-10-17"
   CloudFrontCreateInvalidationPolicy:
     Type: AWS::IAM::ManagedPolicy
     Properties:
       PolicyDocument:
-        Version: "2012-10-17"
         Statement:
-          - Effect: Allow
-            Action:
-              - cloudfront:CreateInvalidation
-            Resource:
-              - "*"
+          - Action: cloudfront:CreateInvalidation
+            Effect: Allow
+            Resource: "*"
+        Version: "2012-10-17"
   CodePipelineListPipelinesPolicy:
     Type: AWS::IAM::ManagedPolicy
     Properties:
       PolicyDocument:
-        Version: "2012-10-17"
         Statement:
-          - Effect: Allow
-            Action:
-              - codepipeline:ListPipelines
-            Resource:
-              - "*"
+          - Action: codepipeline:ListPipelines
+            Effect: Allow
+            Resource: "*"
+        Version: "2012-10-17"
   CodePipelineStartPipelineExecutionPolicy:
     Type: AWS::IAM::ManagedPolicy
     Properties:
       PolicyDocument:
-        Version: "2012-10-17"
         Statement:
-          - Effect: Allow
-            Action:
-              - codepipeline:StartPipelineExecution
-            Resource:
-              - "*"
+          - Action: codepipeline:StartPipelineExecution
+            Effect: Allow
+            Resource: "*"
+        Version: "2012-10-17"
   CodePipelineStartPipelineApprovalResultPolicy:
     Type: AWS::IAM::ManagedPolicy
     Properties:
       PolicyDocument:
-        Version: "2012-10-17"
         Statement:
-          - Effect: Allow
-            Action:
-              - codepipeline:PutApprovalResult
-            Resource:
-              - "*"
+          - Action: codepipeline:PutApprovalResult
+            Effect: Allow
+            Resource: "*"
+        Version: "2012-10-17"
   CodePipelineTransitionChangePolicy:
     Type: AWS::IAM::ManagedPolicy
     Properties:
       PolicyDocument:
-        Version: "2012-10-17"
         Statement:
-          - Effect: Allow
-            Action:
+          - Action:
               - codepipeline:DisableStageTransition
               - codepipeline:EnableStageTransition
-            Resource:
-              - "*"
+            Effect: Allow
+            Resource: "*"
+        Version: "2012-10-17"
   CodePipelineReadPolicy:
     Type: AWS::IAM::ManagedPolicy
     Properties:
       PolicyDocument:
-        Version: "2012-10-17"
         Statement:
-          - Effect: Allow
-            Action:
+          - Action:
               - codepipeline:GetPipeline
               - codepipeline:GetPipelineState
-            Resource:
-              - "*"
+            Effect: Allow
+            Resource: "*"
+        Version: "2012-10-17"
   S3ListVersionsPolicy:
     Type: AWS::IAM::ManagedPolicy
     Properties:
       PolicyDocument:
-        Version: "2012-10-17"
         Statement:
-          - Effect: Allow
-            Action:
-              - s3:ListBucketVersions
-            Resource:
-              - "*"
+          - Action: s3:ListBucketVersions
+            Effect: Allow
+            Resource: "*"
+        Version: "2012-10-17"
   S3TemplateConfigCopyPolicy:
     Type: AWS::IAM::ManagedPolicy
     Properties:
       PolicyDocument:
-        Version: "2012-10-17"
         Statement:
-          - Action:
-              - s3:ListBucket
+          - Action: s3:ListBucket
             Effect: Allow
-            Resource:
-              - "*"
+            Resource: "*"
           - Action:
               - s3:GetObject
               - s3:GetObjectVersion
@@ -131,8 +114,8 @@ Resources:
               - s3:PutObject
               - s3:PutObjectTagging
             Effect: Allow
-            Resource:
-              - arn:aws:s3:::*/template-config-staging.zip
+            Resource: arn:aws:s3:::*/template-config-staging.zip
+        Version: "2012-10-17"
 
   CrossAccountAccessRole:
     Type: AWS::IAM::Role
@@ -165,9 +148,9 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
 
 Outputs:
