--- a/etc/cloudwatch-data-sharing-role.yml
+++ b/etc/cloudwatch-data-sharing-role.yml
@@ -19,11 +19,10 @@ Resources:
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
-          - Action:
-              - sts:AssumeRole
+          - Action: sts:AssumeRole
             Condition:
               StringEquals:
-                "aws:PrincipalOrgID": !Ref OrganizationId
+                aws:PrincipalOrgID: !Ref OrganizationId
             Effect: Allow
             Principal:
               AWS: "*"
@@ -35,9 +34,9 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
 
 Outputs:
