--- a/etc/cloudwatch-data-sharing-org-list-role.yml
+++ b/etc/cloudwatch-data-sharing-org-list-role.yml
@@ -19,8 +19,7 @@ Resources:
     Properties:
       AssumeRolePolicyDocument:
         Statement:
-          - Action:
-              - sts:AssumeRole
+          - Action: sts:AssumeRole
             Effect: Allow
             Principal:
               AWS: !Split
@@ -33,19 +32,19 @@ Resources:
         Version: "2012-10-17"
       Policies:
         - PolicyDocument:
-            Version: "2012-10-17"
             Statement:
               - Action:
                   - organizations:ListAccounts
                   - organizations:ListAccountsForParent
                 Effect: Allow
                 Resource: "*"
+            Version: "2012-10-17"
           PolicyName: CloudWatch-CrossAccountSharing-ListAccounts-Policy
       RoleName: CloudWatch-CrossAccountSharing-ListAccountsRole
       Tags:
         - Key: Project
           Value: Infrastructure
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
