--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -31,6 +31,9 @@ Parameters:
   UploadSigningUserName: { Type: String }
   UploadSigningEndpointUrl: { Type: String }
   UploadSigningAccessKeyId: { Type: String }
+  VpcPrivateSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
+  VpcPrivateSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
+  VpcPrivateSubnet3Id: { Type: "AWS::EC2::Subnet::Id" }
 
 Resources:
   MetricsStack:
@@ -202,4 +205,35 @@ Resources:
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
       TemplateURL: !Sub ${TemplateUrlPrefix}/styleguide.yml
+      TimeoutInMinutes: 5
+
+  NetworksStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        # AlbFullName: !Ref AlbFullName
+        # AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        # EcsClusterArn: !Ref EcsClusterArn
+        # VpcId: !Ref VpcId
+        # SecretsBase: !Ref SecretsBase
+        # EcrImageTag: !Ref MetricsEcrImageTag
+        # SecretsVersion: !Ref MetricsSecretsVersion
+        # EcrRegion: !Ref EcrRegion
+        # SecretsStackName: !Ref SecretsStackName
+        # NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        # EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        VpcPrivateSubnet1Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
+        VpcPrivateSubnet1Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
+        VpcPrivateSubnet1Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Sub ${TemplateUrlPrefix}/networks.yml
       TimeoutInMinutes: 5
