Fix subnet parameters

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -216,7 +216,7 @@ Resources:
         # AlbFullName: !Ref AlbFullName
         # AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
         # EcsClusterArn: !Ref EcsClusterArn
-        # VpcId: !Ref VpcId
+        VpcId: !Ref VpcId
         # SecretsBase: !Ref SecretsBase
         # EcrImageTag: !Ref MetricsEcrImageTag
         # SecretsVersion: !Ref MetricsSecretsVersion
@@ -225,9 +225,9 @@ Resources:
         # NotificationsStackName: !Ref NotificationsStackName
         EnvironmentType: !Ref EnvironmentType
         # EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
-        VpcPrivateSubnet1Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
-        VpcPrivateSubnet1Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
-        VpcPrivateSubnet1Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
+        VpcPrivateSubnet1Id: VpcPrivateSubnet1Id
+        VpcPrivateSubnet2Id: VpcPrivateSubnet2Id
+        VpcPrivateSubnet3Id: VpcPrivateSubnet3Id
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
