Add missing parameter

--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -5,6 +5,7 @@ Description: metrics.prx.org application running in Docker # TODO
 
 Parameters:
   EnvironmentType: { Type: String }
+  VpcId: { Type: "AWS::EC2::VPC::Id" }
   VpcPrivateSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPrivateSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPrivateSubnet3Id: { Type: "AWS::EC2::Subnet::Id" }
