--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -225,9 +225,9 @@ Resources:
         # NotificationsStackName: !Ref NotificationsStackName
         EnvironmentType: !Ref EnvironmentType
         # EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
-        VpcPrivateSubnet1Id: VpcPrivateSubnet1Id
-        VpcPrivateSubnet2Id: VpcPrivateSubnet2Id
-        VpcPrivateSubnet3Id: VpcPrivateSubnet3Id
+        VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
+        VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
+        VpcPrivateSubnet3Id: !Ref VpcPrivateSubnet3Id
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
