--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -18,7 +18,7 @@ Resources:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
       IpAddressType: ipv4
-      Scheme: intenral
+      Scheme: internal
       Subnets:
         - !Ref VpcPrivateSubnet1Id
         - !Ref VpcPrivateSubnet2Id
