--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -9,6 +9,8 @@ Parameters:
   VpcPrivateSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPrivateSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPrivateSubnet3Id: { Type: "AWS::EC2::Subnet::Id" }
+  NetworksEcrImageTag: { Type: String }
+  NetworksSecretsVersion: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
