--- a/stacks/provisioned/dovetail-router.yml
+++ b/stacks/provisioned/dovetail-router.yml
@@ -1,4 +1,4 @@
-# stacks/provisioned/metrics.yml
+# stacks/provisioned/dovetail-router.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
 Description: metrics.prx.org application running in Docker # TODO
@@ -170,7 +170,9 @@ Resources:
     Type: AWS::ECS::TaskDefinition
     Properties:
       ContainerDefinitions:
-        - Cpu: 100 # TODO
+        - Command:
+            - web
+          Cpu: 100 # TODO
           Environment:
             - Name: APP_NAME
               Value: dovetailrouter
