--- a/devops/cross-account-vpc-peering-requester.yml
+++ b/devops/cross-account-vpc-peering-requester.yml
@@ -72,7 +72,8 @@ Parameters:
     Type: String
     Description: >-
       (Optional) The IPv4 CIDR address block used for the destination match.
-      This value is required if a route table ID is provided.
+      Generally this is the CIDR block of the accepter VPC. This value is
+      required if a route table ID is provided.
   PeerOwnerId:
     Type: String
     Description: >-
